@@ -16,8 +16,16 @@ ext {
   javaMainClass = "org.elasticsearch.entitlement.tools.jdkapi.JdkApiExtractor"
 }
 
+def addIncubatorModules = {
+  file("${buildParams.runtimeJavaHome.get()}/jmods")
+    .listFiles()
+    .findAll { it.name.endsWith('.jmod') && it.name.contains('.incubator.') }
+    .collectMany { ['--add-modules', it.name[0..-6]] }
+}
+
 application {
   mainClass.set(javaMainClass)
+  applicationDefaultJvmArgs = addIncubatorModules()
 }
 
 tasks.named("run").configure {
@@ -29,9 +37,9 @@ repositories {
 }
 
 dependencies {
-  compileOnly(project(':libs:core'))
-  implementation 'org.ow2.asm:asm:9.8'
-  implementation 'org.ow2.asm:asm-util:9.8'
+  implementation(project(':libs:core'))
+  implementation 'org.ow2.asm:asm:9.9'
+  implementation 'org.ow2.asm:asm-util:9.9'
   implementation(project(':libs:entitlement:tools:common'))
 }
 
